@@ -279,6 +279,10 @@ DEFINE_GUID(MEDIASUBTYPE_RACP,
 
 // QuickTime PCM
 
+// 454E4F4E-0000-0010-8000-00AA00389B71
+DEFINE_GUID(MEDIASUBTYPE_PCM_NONE,
+			0x454E4F4E, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
+
 // 20776172-0000-0010-8000-00AA00389B71
 DEFINE_GUID(MEDIASUBTYPE_PCM_RAW,
 			0x20776172, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
